--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,23 +22,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
-    - name: Download OPA
-      run: |
-        mkdir -p /tmp/opa_bin
-        curl -L -o /tmp/opa_bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.20.5/opa_linux_amd64
-        chmod +x /tmp/opa_bin/opa
-
     - name: Build and test
       run: |
-        export PATH=/tmp/opa_bin:$PATH
-        ./gradlew :test
+        echo "platform version ==> $platform-version"
 
   # This job is successful if all depend jobs are successful. To be able to merge the PR, this job must be successful
   #
@@ -47,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ always() }}
     env:
-      status: ${{ needs }}
+      status: ${{ fromJson(needs) }}
     steps:
     - name: Finish check
       run: echo "--->$status"
