--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build and test
       run: |
-        if [ ${platform-version} == "201" ]; then
+        if [ "${platform-version}" == "201" ]; then
           echo "platform 201"
         else
           echo "platform 202"
