--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,11 @@ on:
     branches: [ master ]
 
 jobs:
+  check-licence:
+   runs-on: ubuntu-latest
+   steps:
+     - name: Check lic
+       run: echo "ok"
   build:
     strategy:
       fail-fast: false
