--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
   # This job is successful if all depend jobs are successful. To be able to merge the PR, this job must be successful
   #
   all-checks:
-    needs: [build]
+    needs: [build, check-licence]
     runs-on: ubuntu-latest
     if: ${{ always() }}
     env:
