--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,14 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ always() }}
     env:
-      JOB_CONTEXT: ${{ toJson(needs) }}
+      NEEDS_CONTEXT: ${{ toJson(needs) }}
     steps:
     - name: Finish check
-      run: echo "--->$JOB_CONTEXT"
+      run: |
+        if jq -r '.[] | .result ' <<<"${NEEDS_CONTEXT}" | grep -q failure ; then
+            echo "Error some check are failed"
+            exit 1
+        else 
+            echo "All checks ok"
+            exit 0
+        fi
