github action: check source files contains licence
Signed-off-by: Vincent Gramer <vgramer@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,11 @@ on:
     branches: [ master ]
 
 jobs:
+  check-licence:
+    runs-on: ubuntu-latest
+    steps:
+    - run: hack/check-licence.sh
+
   build:
     strategy:
       fail-fast: false
@@ -42,7 +47,7 @@ jobs:
 
   # This job is successful if all depend jobs are successful. To be able to merge the PR, this job must be successful
   all-checks:
-    needs: [build]
+    needs: [build, check-licence]
     runs-on: ubuntu-latest
     if: ${{ always() }}
     env:
