--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
 
-  build:
+  test:
     strategy:
       fail-fast: false
       matrix:
@@ -58,14 +58,65 @@ jobs:
         curl -L -o /tmp/opa_bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.20.5/opa_linux_amd64
         chmod +x /tmp/opa_bin/opa
 
-    - name: Build and test
+    - name: test plugin
       run: |
         export PATH=/tmp/opa_bin:$PATH
         ./gradlew :test
 
+  # Verify plugin with IntelliJ Plugin Verifier
+  verify-plugin:
+    strategy:
+      fail-fast: false
+      matrix:
+        platform-version: [ 201, 202 ]
+    timeout-minutes: 60
+    env:
+      ORG_GRADLE_PROJECT_platformVersion: ${{ matrix.platform-version }}
+    runs-on: ubuntu-latest
+    needs: [check-gradle-wrapper, test]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      # Cache gradle dependencies
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build plugin
+        run: |
+          export PATH=/tmp/opa_bin:$PATH
+          ./gradlew :plugin:buildPlugin
+
+      - name: Verify Plugin
+        id: verify
+        uses: ChrisCarini/intellij-platform-plugin-verifier-action@v0.0.2
+        with:
+          plugin-location: plugin/build/distributions/*.zip
+          ide-versions: ./plugin-verifier-ide-versions-${{ matrix.platform-version }}.txt
+
+      - name: Print Logs
+        if: ${{ always() }}
+        env:
+          OUTPUT_LOG: ${{ steps.verify.outputs.verification-output-log-filename }}
+        run: |
+          echo "The verifier log file [$OUTPUT_LOG] contents : " ;
+          cat $OUTPUT_LOG
+
   # This job is successful if all depend jobs are successful. To be able to merge the PR, this job must be successful
   all-checks:
-    needs: [build, check-license, check-gradle-wrapper]
+    needs: [test, check-license, check-gradle-wrapper, verify-plugin]
     runs-on: ubuntu-latest
     if: ${{ always() }}
     env:
